--- a/package.json
+++ b/package.json
@@ -53,9 +53,11 @@
     "typescript": "~4.2.3"
   },
   "lint-staged": {
-    "**/*.ts": [
-      "prettier --write",
-      "ng lint --fix"
+    "*.{js,json,css,scss,md,ts,html}": [
+      "prettier --write"
+    ],
+    "*.{ts}": [
+      "ng lint"
     ]
   }
 }
