--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build:meta": "ng build ng-meta-helper",
+    "build:watch": "ng build ng-meta-helper --watch",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "lint": "ng lint",
@@ -34,7 +35,7 @@
     "@angular/cli": "~12.0.2",
     "@angular/compiler-cli": "~12.0.2",
     "@types/jasmine": "~3.6.0",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.20.15",
     "@typescript-eslint/eslint-plugin": "4.23.0",
     "@typescript-eslint/parser": "4.23.0",
     "eslint": "^7.26.0",
@@ -50,7 +51,7 @@
     "lint-staged": "^11.0.0",
     "ng-packagr": "^12.0.0",
     "prettier": "^2.3.1",
-    "typescript": "~4.2.3"
+    "typescript": "4.2.3"
   },
   "lint-staged": {
     "*.{js,json,css,scss,md,ts,html}": [
