--- a/projects/ng-meta-helper/package.json
+++ b/projects/ng-meta-helper/package.json
@@ -2,8 +2,9 @@
   "name": "ng-meta-helper",
   "version": "0.0.1",
   "peerDependencies": {
-    "@angular/common": "^12.0.3",
-    "@angular/core": "^12.0.3"
+    "@angular/core": "^12.0.3",
+    "@angular/router": "^12.0.2",
+    "rxjs": "^6.6.0"
   },
   "dependencies": {
     "tslib": "^2.1.0"
