--- a/projects/ng-meta-helper/package.json
+++ b/projects/ng-meta-helper/package.json
@@ -1,6 +1,12 @@
 {
   "name": "ng-meta-helper",
-  "version": "0.0.4",
+  "description": "Automatic update of title, description and link of meta tags through a router",
+  "keywords": [
+    "seo",
+    "meta tags",
+    "angular"
+  ],
+  "version": "0.0.5",
   "peerDependencies": {
     "@angular/core": "^12.0.3",
     "@angular/router": "^12.0.2",
@@ -8,5 +14,10 @@
   },
   "dependencies": {
     "tslib": "^2.1.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/goodnewsforyoubaby/ng-seo-helpers",
+    "directory": "projects/ng-meta-helper"
   }
 }
