--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,7 @@
     "experimentalDecorators": true,
     "moduleResolution": "node",
     "importHelpers": true,
+    "esModuleInterop": false,
     "target": "es2017",
     "module": "es2020",
     "lib": ["es2018", "dom"]
