--- a/angular.json
+++ b/angular.json
@@ -117,8 +117,7 @@
       }
     }
   },
-  "defaultProject": "ng-meta-helper",
   "cli": {
-    "defaultCollection": "@angular-eslint/schematics"
+    "schematicCollections": ["@angular-eslint/schematics"]
   }
 }
